--- a/about.html
+++ b/about.html
@@ -32,8 +32,11 @@
         h1, p{
             margin: 30px 15px;
         }
-        .navbar{width: 200%;}
-        footer{width: 200%;}
+        nav, footer {
+            width: 100%;
+            overflow-x: auto;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
