--- a/gallery.html
+++ b/gallery.html
@@ -53,8 +53,12 @@
 .star-rating label:hover ~ label {
   color: gold;
 }
-.navbar{width: 200%;}
-footer{width: 200%;}
+nav, footer {
+            width: 100%;
+            overflow-x: auto;
+            box-sizing: border-box;
+        }
+
     </style>
 </head>
 <body>
